[tool.poetry]
name = "memento-cli"
version = "0.0.2"
description = "Examine snapshots in eeb archives such as the Internet Archive's Wayback Machine"
authors = ["Ed Summers <ehs@pobox.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "memento_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
selenium = "^4.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.test.dependencies]
black = "^23.9.1"

[tool.poetry.scripts]
memento = "memento_cli:main"

[tool.black]
include = ".py$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
